assets/css/about.css
body {
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  background: radial-gradient(#2b5876, #4e4376);
  line-height: 2em;
  margin: auto;
  width: 100%;
  font-size: large;
}

@keyframes borderBottom {
  0% {
    width: 0;
    border-bottom: 2px solid rgb(7, 255, 14);
  }
  100% {
    width: 100%;
    border-bottom: 2px solid rgb(7, 255, 14);
  }
}

.header-container, .section-container {
  margin: auto;
  width: 90%;
  overflow: hidden;
}

@viewport {
  width: device-width;
  zoom: 1;
}

/****************************Header************************/

header {
  background-color: rgba(0, 0, 0, 0.08);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 0;
  margin: 0;
  color: white;
  padding: 10px 0;
}

header a {
  color: #ffffff;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 17px;
  margin: 0 20px;
  transition: all ease-in-out 100ms;
}

header .header-container #branding {
  float: left;
}

#home-click {
  margin: 0;
  margin-left: 10px;
  font-size: 25px;
  font-style: italic;
}

#home-click a:hover {
  color: rgb(7, 255, 14);
  text-decoration: none;
  font-weight: 600;
}

header #branding #home-click span {
  color: rgb(7, 255, 14);
  font-style: italic;
  font-weight: normal;
}

header nav {
  display: flex;
  float: right;
  margin-top: 7px;
}

header nav a:hover, .active {
  color: rgb(7, 255, 14);
  font-weight: bold;
  padding-top: 5px;
  text-decoration: none;
}

@media only screen and (max-width: 768px) {
  header {
    width: 100%;
  }
  header nav {
    height: auto;
    width: 100%;
    padding: 5px;
    justify-content: center;
  }
  header nav a {
    font-size: 20px;
  }
  .header-container {
    text-align: center;
  }
  #branding {
    display: block;
    width: 100%;
    float: left;
  }
  #home-click {
    text-align: center;
  }
}

@media only screen and (max-width: 640px) {
  header {
    height: auto;
    padding: 0;
  }
  header nav a {
    font-size: 17px;
    margin: 0 8px;
  }
  .header-container {
    padding: 0;
  }
  .active {
    padding: 0;
  }
}

@media only screen and (max-width: 330px) {
  header nav a {
    font-size: 15px;
    margin: 0 8px;
  }
  .active {
    padding: 0;
  }
}

<!--navbar-->.navbar {
  position: fixed;
  z-index: 10;
}

/****************** Section Two - About Me*****************/

.section-container {
  /* min-height: 100vh;  */
  border-bottom: 1px solid rgb(65, 65, 65);
}

h1 {
  text-align: center;
  /* margin-top: 10%; */
  font-size: 60px;
  color: rgb(255, 255, 255);
  font-family: "Lobster", cursive;
  border-bottom: 1px solid rgb(65, 65, 65);
  padding-bottom: 30px;
}

div.selfie-img img {
  border-radius: 20%;
  width: 350px;
  height: 350px;
  /*float: left;
  */
  margin: 20px 20px 50px 20px;
  transition: ease-in-out 300ms;
  -webkit-box-shadow: 0px 0px 12px -4px #000000;
  box-shadow: 0px 0px 12px -4px #000000;
  z-index: 10;
  -webkit-border-radius: 20%;
  -moz-border-radius: 20%;
  -ms-border-radius: 20%;
  -o-border-radius: 20%;
}

div.selfie-img img:hover {
  border-radius: 1%;
}

/* Bio info div. profile img and about-me */

div.article {
  color: white;
  height: auto;
  display: flex;
  flex-direction: row;
}

/* Introduction about me */

div.info {
  padding: 40px;
}

/***************** Skills ********************/

.skills-title {
  text-align: center;
  margin-top: 3%;
  font-size: 60px;
  color: rgb(255, 255, 255);
  font-family: "Lobster", cursive;
  border-bottom: 1px solid rgb(65, 65, 65);
}

.html, .css, .JavaScript, .jQuery, .bootstrap, .nodeJS, .expressJS, .MySQL, .React, .mongodb, .npm, .mern {
  margin-top: 30px;
  height: 80px;
  width: auto;
  border-radius: 50%;
  padding: 0 10px;
}

.npm, .mern {
  border-radius: 0;
}

/* Button at the end of the page. This leads to projects page */

div.button {
  text-align: center;
  margin-top: 25px;
  padding-bottom: 30px;
}

div.button #explore {
  text-decoration: none;
  text-transform: uppercase;
  font-weight: 400;
  font-size: 0.8rem;
  margin: 0.375rem;
  padding: 0.7rem 1.1rem;
  border-radius: 0.125rem;
  border: 0;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

div.button #explore a {
  text-decoration: none;
  color: white;
  padding: 5px;
}

/*Footer*/

#footer {
  margin-left: auto;
  margin-right: auto;
}

/*iPad Pro screen*/

@media only screen and (max-width: 1024px) {
  div.article {
    display: flex;
    flex-flow: column;
    align-items: center;
    width: auto;
  }
  div.info {
    line-height: 2em;
    text-align: justify;
    font-size: 18px;
    padding: 0;
  }
  div.title h1 {
    font-size: 4em;
  }
  div.selfie-img img {
    height: 300px;
    width: 300px;
    padding: 0;
    margin-bottom: 0;
    align-content: center;
  }
  .html, .css, .JavaScript, .jQuery, .bootstrap, .nodeJS, .expressJS, .MySQL, .React, .mongodb, .firebase {
    height: 70px;
    width: auto;
  }
  .npm, .mern {
    margin-top: 30px;
    height: 70px;
  }
}

/*Responsive*/

@media only screen and (max-width: 768px) {
  .loaderContainer {
    padding: 0 120px;
  }
  #loader {
    padding: 300px 0 0 0;
    font-size: 3.5rem;
    font-weight: 500;
  }
  div.selfie-img img {
    height: 300px;
    width: 300px;
    padding: 0;
    margin-bottom: 0;
    align-content: center;
  }
  div.article {
    display: flex;
    flex-flow: column;
    align-items: center;
    width: auto;
    margin-top: 0;
  }
  div.bio-info {
    padding: 0;
    margin: 0 auto;
    text-align: justify;
    line-height: 2em;
  }
  div.social-links a {
    padding-bottom: 10px;
  }
  div.title h1 {
    margin-top: 20%;
  }
  .html, .css, .JavaScript, .jQuery, .bootstrap, .sass, .nodeJS, .expressJS, .MySQL, .React, .mongodb, .firebase {
    height: 50px;
    width: auto;
  }
  .sass {
    width: 70px;
  }
  .npm, .mern {
    margin-top: 30px;
    height: 50px;
  }
}

/*mobile responsive*/

@media only screen and (max-width: 640px) {
  .loaderContainer {
    padding: 0 40px;
  }
  #loader {
    padding: 180px 0 0 0;
    font-size: 2.1rem;
    font-weight: 500;
  }
  header {
    height: auto;
    padding: 10px 0;
  }
  .section-container {
    width: auto;
    padding: 0 10px;
  }
  div.selfie-img img {
    height: 300px;
    width: 300px;
    margin: 25px;
  }
  div.article {
    margin: 0;
    border: none;
    width: auto;
    height: auto;
  }
  div.bio-info {
    padding: 0;
  }
  div.article p {
    padding: 0 10px;
    font-size: 17px;
    text-align: justify;
  }
  div.title h1 {
    margin-top: 35%;
  }
  .html, .css, .JavaScript, .jQuery, .bootstrap, .nodeJS, .expressJS, .MySQL, .React, .mongodb, .firebase {
    height: 50px;
    width: auto;
  }
  .npm, .mern {
    margin-top: 30px;
    height: 50px;
  }
  footer div.footerContainer {
    display: flex;
    text-align: center;
    flex-direction: column-reverse;
  }
}

@media only screen and (max-width: 330px) {
  div.title h1 {
    margin-top: 35%;
    font-size: 4em;
  }
  div.selfie-img img {
    margin-top: 0;
    height: 250px;
    width: 250px;
    margin: 25px;
  }
  div.article {
    margin-bottom: 30px;
  }
  div.article p {
    padding: 0 5px;
    font-size: 15px;
    text-align: justify;
  }
}

.symbols {
  margin-top: 10px;
  height: 100px;
  width: auto;
  padding: 10px;
  border-radius: 20%;
  padding: 0 10px;
  -webkit-border-radius: 20%;
  -moz-border-radius: 20%;
  -ms-border-radius: 20%;
  -o-border-radius: 20%;
}

#skillsMain {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#skillsDiv {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.techDiv {
  width: 320px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: 5px;
  border: 1px solid #333333;
}

.tech {
  width: 64px;
  max-height: 64px;
  display: flex;
  align-items: center;
  margin: 5px;
}

.techDivTitle {
  width: 100%;
  text-align: center;
  text-decoration: none;
  letter-spacing: 2px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 14px;
  color: white;
  background-color: rgb(51, 45, 45);
  padding: 5px;
}

.tech img {
  width: 64px;
  max-height: 70px;
}

.tooltip {
  position: relative;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #ffddd2;
  color: #333333;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: 100%;
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.5s;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  bottom: 100%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

/* techstack */

.projectsSection {
  padding: 0 1em;
}

.projectsContainer {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
}

.projectHR {
  text-align: center;
  width: 80%;
  height: 1px;
  background: #333;
  background-image: linear-gradient(to right, #ccc, #333, #ccc);
  margin: 1em 15%;
}

.project {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin: 2em 3em;
}

#divider {
  background: #333;
  margin-top: 100px;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.description {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  flex: 1;
  /* min-width: 50%; */
  margin: 1em;
}

.linksContainer {
  display: flex;
}

/*projects */

.techUsed {
  /* border-radius: 50%; */
  height: 40px;
  width: 40px;
  margin: 5px;
}

.col-md-6 {
  padding: 20px;
}

.bold {
  font-weight: bold;
}

.projectImg {
  width: 30em;
  height: 15em;
  text-align: center;
}

.project-item {
  margin: auto;
}

/*Contact*/

.contact-logo {
  height: 50px;
  width: 50px;
}

h3 {
  color: white;
  text-align: center;
}

